[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env_sourcer"
version = "v0.0.6"
requires-python = ">= 3.11"
description = "library to source environmental variables easily through different environments"
dependencies = []

[project.optional-dependencies]
tests = [
    "pytest"
]


[tool.setuptools.packages]
find = {}
